--- a/notes/01/week1_p1.ipynb
+++ b/notes/01/week1_p1.ipynb
@@ -2093,9 +2093,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cia] *",
+   "display_name": "Python [conda env:fds]",
    "language": "python",
-   "name": "conda-env-cia-py"
+   "name": "conda-env-fds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2107,7 +2107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
