--- a/notes/01/week1_p3_ModelingMultivariateData.ipynb
+++ b/notes/01/week1_p3_ModelingMultivariateData.ipynb
@@ -449,9 +449,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:yse]",
+   "display_name": "Python [conda env:fds]",
    "language": "python",
-   "name": "conda-env-yse-py"
+   "name": "conda-env-fds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -463,9 +463,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
