--- a/notes/02/week2_p4_UsingQuantilesToCleanData.ipynb
+++ b/notes/02/week2_p4_UsingQuantilesToCleanData.ipynb
@@ -1097,8 +1097,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "67366c4d",
+   "execution_count": null,
+   "id": "5b81092f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,6 +1121,30 @@
     "# Over plot the line with you’d get if you had described the distribution by the IQR instead. \n",
     "# You’ll need to get the x values for the 25th and 75th percentiles\n",
     "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.rv_continuous.ppf.html \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "67366c4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I’ve constructed a mag.het (for “Heteroskedastic” - unequal errors) column without the outliers, \n",
+    "# but you should see what happens when you look at the Q-Q plot for this data\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Construct a new quantity where you subtract of the mean of mag.het, and divide by the uncertainty mag.het.error\n",
+    "# repeat the QQ analysis with your new quantity \n",
     "\n",
     "\n",
     "\n",
