add HW01 points and due date

--- a/homework/01/hw01.ipynb
+++ b/homework/01/hw01.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 1"
+    "# Homework 1 (Due Feb. 10, 2023 at Noon) \n",
+    "\n",
+    "Submit your solution notebook in your directory via github PR."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 1\n",
+    "## Problem 1 (50 pts)\n",
     "\n",
     "###  Fitting a Line using a Maximum Likelihood Estimator\n",
     "\n",
@@ -43,23 +45,46 @@
     "\n",
     "Your mission is to:\n",
     "\n",
-    "- write a function that computes the squared loss, and incorporates the uncertainties on the measurements, $dy$\n",
-    "- Fit a line to the full sample by evaluating this likelihood on a grid of a, b\n",
-    "- Use sigma-clipping or an L-estimator for outlier rejection and fit a line to the data with outliers rejected\n",
-    "- Make a QQ plot of the residuals\n",
-    "- Define a new likelihood function that implements the Huber loss, also incorporating the measurement uncertainties $dy$\n",
-    "- Fit a new line to all of the data (no outlier rejection) with the new Huber likelihod, except now use scipy.optimize.fmin instead of a grid search.\n",
-    "- You know the drill by now - QQ plot of the residuals\n",
+    "- write a function that computes the squared loss, and incorporates the uncertainties on the measurements, $dy$ (10 pts)\n",
+    "- Fit a line to the full sample by evaluating this likelihood on a grid of a, b (10 pts)\n",
+    "- Use sigma-clipping or an L-estimator for outlier rejection and fit a line to the data with outliers rejected (10 pts) and make a QQ plot of the residuals (10 pts)\n",
+    "- Define a new likelihood function that implements the Huber loss, also incorporating the measurement uncertainties $dy$ (10 pts)\n",
+    "- Fit a new line to all of the data (no outlier rejection) with the new Huber likelihod, except now use scipy.optimize.fmin instead of a grid search, and you know the drill by now - QQ plot of the residuals (10 pts)\n",
     "\n",
     "Recommended reading: David Hogg, Jo Bovy, and Dustin Lang: \"Data analysis recipes: Fitting a model to data\", 2010: https://arxiv.org/abs/1008.4686"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import scipy.optimize\n",
+    "import statsmodels.api as sm\n",
+    "from astroML.datasets import fetch_hogg2010test\n",
+    "\n",
+    "# this just makes plots a bit easier on my laptop - disable as needed\n",
+    "%config InlineBackend.figure_format='retina'\n",
+    "\n",
+    "#------------------------------------------------------------\n",
+    "# Get data: this includes outliers\n",
+    "data = fetch_hogg2010test()\n",
+    "x = data['x']\n",
+    "y = data['y']\n",
+    "dy = data['sigma_y']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,13 +104,13 @@
     "\n",
     "\n",
     "Split the data into LMC and SMC, and then again by mode F and 1, and plot the `W` on the y-axis vs `log(P1)` on x.\n",
-    "Fit or estimate straight lines to each of the four samples using your solution to Problem 1.\n",
+    "Fit or estimate straight lines to each of the four samples using your solution to Problem 1. (10 pts)\n",
     "\n",
-    "Compute the residuals of each sample to it's respective line. Do these residuals look like a normal distribution? If not, speculate on why (WATCH THE YOUTUBE VIDEO!)\n",
+    "Compute the residuals of each sample to it's respective line. Do these residuals look like a normal distribution? If not, speculate on why (WATCH THE YOUTUBE VIDEO!) (10 pts)\n",
     "\n",
-    "Plot the residuals color coded by if they are positive or negative vs RA and Dec (just like a Hess diagram in Problem 1).\n",
+    "Plot the residuals color coded by if they are positive or negative vs RA and Dec (just like a Hess diagram in Problem 1). (15 pts)\n",
     "\n",
-    "Finally, plot the residuals against the fitted `W` values, and just to anticipate the next homework assignment, also plot `log(P1) vs V-I`. Comment on what you are seeing."
+    "Finally, plot the residuals against the fitted `W` values, and just to anticipate the next homework assignment, also plot `log(P1) vs V-I`. Comment on what you are seeing. (15 pts)"
    ]
   },
   {
