--- a/homework/AidanBerres/01/hw01.ipynb
+++ b/homework/AidanBerres/01/hw01.ipynb
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Talk about why they are not gaussian\n",
+    "Due to these sources being variable stars, we can assume that the fit line going through the points is close to the middle between the bright and dim magnitudes thus the residuals from the fit line would almost be equidistant in value from the line. This would most likely result in a lot of similar values surrounding 0 on a histogram, like we see here.\n",
     "\n",
     "---\n",
     "### Residuals Plot"
@@ -830,7 +830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "comment on what I am seeing\n",
+    "As stated before we have a large amount of the residual values near the 0 point due to the equidistant variablility of the Cepheid Variables. These plots show the variability of the star with certain magnitudes. We find for most magnitudes that they do conform to a similar variability, thus showing a mostly 0 slope line blob for these plots.\n",
     "\n",
     "### V-I vs. log(P1)"
    ]
@@ -866,8 +866,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "comment on what I am seeing"
+    "This plot shows the how the period changes with the color-magnitude of the stars. We find that most of the stars that have similar periods have similar magnitudes as shown by the large groupings of stars in some of the plots. We can see also that there is some positive slope value as you increase the log period value. Furthermore, we can see some outliers especially in the LMC plots. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
