--- a/homework/MaggieVerrico/01/mverrico_hw01.ipynb
+++ b/homework/MaggieVerrico/01/mverrico_hw01.ipynb
@@ -1005,9 +1005,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:fds] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-fds-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
