question 2 going absolutely foolish

--- a/homework/AidanBerres/02/hw02.ipynb
+++ b/homework/AidanBerres/02/hw02.ipynb
@@ -355,13 +355,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -740,7 +733,7 @@
     "To determine the result, we need an intermediate estimate of where the marker sits. We'll quantify this marker placement as a probability $p$ that any given roll lands in Alice's favor.  Because five balls out of eight fell on Alice's side of the marker, we can quickly show that the maximum likelihood estimate of $p$ is given by:\n",
     "\n",
     "$$\n",
-    "\\hat{p} = 5/8\n",
+    "\\large \\hat{p} = 5/8\n",
     "$$\n",
     "\n",
     "(This result follows in a straightforward manner from the [binomial likelihood](http://en.wikipedia.org/wiki/Binomial_distribution)). \n",
@@ -751,11 +744,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.962962962962962"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "# YOUR ANSWER HERE\n",
+    "pbob = (3/8)**3\n",
+    "(1-(3/8)**3)/((3/8)**3)"
    ]
   },
   {
@@ -824,7 +830,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### YOUR ANSWER HERE"
+    "### YOUR ANSWER HERE\n",
+    "\n",
+    "<!-- ${\\displaystyle \\large {{\\frac {n!}{k!(n-k)!}}}p^{k}(1-p)^{n-k}}$ -->\n",
+    "\n",
+    "$\\large P(B~|~p,D) = (1-p)^3$\n",
+    "\n",
+    "$\\large P(D~|~p) =  \\frac {8!}{5!(3)!}p^{5}(1-p)^{3}$\n",
+    "\n",
+    "$\\large P(p)= 1$\n",
+    "\n",
+    "$\\large  \\frac{\\int_{0}^{1} (1-p)^6 p^{5} dp}{\\int_{0}^{1} p^{5}(1-p)^{3} dp}$"
    ]
   },
   {
@@ -843,11 +859,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09090909090870758\n",
+      "10.000000000046382\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "# YOUR ANSWER HERE\n",
+    "ps = np.linspace(0,1,1000)\n",
+    "dp = ps[1]-ps[0]\n",
+    "a1 = np.sum(dp*(1-ps)**6 *ps**5)\n",
+    "a2 = np.sum(dp*ps**5 * (1-ps)**3)\n",
+    "area = a1/a2\n",
+    "print(area)\n",
+    "print((1-area)/area)"
    ]
   },
   {
@@ -871,11 +903,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0000e+00, 0.0000e+00, 1.0000e+00, ..., 5.0170e+04, 5.0170e+04,\n",
+       "       5.0171e+04])"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "# YOUR ANSWER HERE\n",
+    "np.random.seed(420)\n",
+    "p1=np.random.random(100_000).reshape(100_000,1)\n",
+    "game=np.random.rand(100_000,11)\n",
+    "g1=np.where(p1>game,game,1)\n",
+    "gm = np.where(g1==1,g1,0)\n",
+    "np.cumsum(gm,axis=0)[:,8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81640081, 0.93567154, 0.76410684, 0.68195685, 0.25575189,\n",
+       "       0.80377113, 0.88980694, 0.94854761, 0.01127564, 0.63557295,\n",
+       "       0.54912199])"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.31564591])"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p1[0]"
    ]
   },
   {
