--- a/homework/SamMemon/hw02/hw02.ipynb
+++ b/homework/SamMemon/hw02/hw02.ipynb
@@ -258,7 +258,7 @@
    "source": [
     "## YOUR ANSWER HERE\n",
     "\n",
-    "<div style=\"color: green\">\n",
+    "<div style=\"color: orange\">\n",
     "We have\n",
     "\n",
     "$$\n",
@@ -268,7 +268,7 @@
     "Setting this derivative equal to zero gives the value of $A$ that maximizes $\\ln L$:\n",
     "\n",
     "$$\n",
-    "\\frac{d\\ln L}{dA}=0\\qquad\\Longrightarrow\\qquad A=\\frac{\\sum_{i=1}^{N}I(x_{i},y_{i})}{N\\;\\mathrm{PSF}(x_{0},y_{0})}\n",
+    "\\frac{d\\ln L}{dA}=0\\qquad\\Longrightarrow\\qquad\\boxed{A=\\frac{\\sum_{i=1}^{N}I(x_{i},y_{i})}{N\\;\\mathrm{PSF}(x_{0},y_{0})}}\n",
     "$$\n",
     "</div>\n",
     "\n",
