corrected text in problem 1

--- a/homework/HaillePerkins/02/hw02.ipynb
+++ b/homework/HaillePerkins/02/hw02.ipynb
@@ -396,7 +396,7 @@
    "source": [
     "### A1.2e: Compare to analytical estimate\n",
     "\n",
-    "The analytical solution is the largest of the two solutions and its around 20% greater than the actual value, but the maximum likelihood solution is very close to the true value."
+    "The analytical solution is the largest of the two solutions and its around 2% greater than the actual value, but the maximum likelihood solution is even closer to the true values."
    ]
   },
   {
