--- a/homework/DavidVizgan/HW1/HW1.ipynb
+++ b/homework/DavidVizgan/HW1/HW1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sized-venice",
+   "id": "assured-judge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abandoned-collection",
+   "id": "armed-inclusion",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "advised-signal",
+   "id": "narrative-potato",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aware-unemployment",
+   "id": "short-gibraltar",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "friendly-daniel",
+   "id": "prostate-value",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "protective-orlando",
+   "id": "common-sunset",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "seventh-router",
+   "id": "twenty-decimal",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "continental-submission",
+   "id": "aging-following",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "shaped-february",
+   "id": "floppy-translation",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "rubber-logistics",
+   "id": "statistical-circular",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "minute-battlefield",
+   "id": "descending-plenty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "engaging-romania",
+   "id": "living-cartridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "technical-spirit",
+   "id": "radical-basis",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "determined-point",
+   "id": "collaborative-classic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,8 +573,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "working-dietary",
+   "execution_count": 21,
+   "id": "framed-membrane",
    "metadata": {},
    "outputs": [
     {
@@ -624,8 +624,8 @@
     "\n",
     "# My speculation:\n",
     "\n",
-    "# The residuals do not really resemble normal distributions, and all of them exhibit a sharp peak around\n",
-    "# residual value of zero. On one hand my model does not incorporate any uncertainty or error from the data, which would\n",
+    "# The residuals do not really (but perhaps vaguely) resemble normal distributions, and all of them exhibit a sharp peak around\n",
+    "# a residual value of zero. On one hand my model does not incorporate any uncertainty or error from the data, which would\n",
     "# certainly explain the behavior in these histograms. Furthermore, though the period of Cepheid stars correlates strongly with their,\n",
     "# luminosities, perhaps the relationship with the \"W-index\" is less direct or requires another variable in the equation, which would cause our\n",
     "# model to be overly simplistic, and hence explaining the behavior we see here."
@@ -633,8 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "bulgarian-cooperation",
+   "execution_count": 22,
+   "id": "english-marijuana",
    "metadata": {},
    "outputs": [
     {
@@ -695,8 +695,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "raising-ancient",
+   "execution_count": 23,
+   "id": "novel-fountain",
    "metadata": {},
    "outputs": [
     {
@@ -749,8 +749,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "finished-hobby",
+   "execution_count": 24,
+   "id": "sustainable-great",
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +803,14 @@
     "# of the histograms above. You would think that these would look somewhat similar to the first plots we made for \n",
     "# this problem, since W = I - 1.55(V-I). Clearly that is not the case."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "disabled-patrol",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
