--- a/homework/01/hw01.ipynb
+++ b/homework/01/hw01.ipynb
@@ -123,9 +123,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:yse]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-yse-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
