--- a/homework/AmandaWasserman/hw02/hw02.ipynb
+++ b/homework/AmandaWasserman/hw02/hw02.ipynb
@@ -1096,7 +1096,7 @@
     "\n",
     "Our two results don't agree because there is an aspect of randomness to the Monte Carlo method. Every time we run it, the first ball is in a different location, allowing the probability p to change with each simulation.\n",
     "\n",
-    "If you were to average over many runs and plot a histogram you would likely get a gaussian distribution with a mean close to solution for 2.\n",
+    "If you were to average over many runs and plot a histogram you would likely get a gaussian distribution with a mean close to solution for 2.3\n",
     "\n",
     "I show this below just because I was curious"
    ]
