some additional comments and formatting

--- a/homework/SamMemon/hw02/hw02.ipynb
+++ b/homework/SamMemon/hw02/hw02.ipynb
@@ -269,7 +269,7 @@
     "If $\\mathrm{PSF}(x_{0},y_{0})$ was intended to be $\\mathrm{PSF}(x_{i}-x_{0},y_{i}-y_{0})$, then we would instead get\n",
     "\n",
     "$$\n",
-    "\\frac{d\\ln L}{dA}=\\frac{1}{\\sigma^{2}}\\sum_{i=1}^{N}\\left\\{\\Bigl[I(x_{i},y_{i})-A\\;\\mathrm{PSF}(x_{i}-x_{0},y_{i}-y_{0})\\Bigr]\\mathrm{PSF}(x_{i}-x_{0},y_{i}-y_{0})\\right\\},\n",
+    "\\frac{d\\ln L}{dA}=\\frac{1}{\\sigma^{2}}\\sum_{i=1}^{N}\\Bigl\\{\\Bigl[I(x_{i},y_{i})-A\\;\\mathrm{PSF}(x_{i}-x_{0},y_{i}-y_{0})\\Bigr]\\mathrm{PSF}(x_{i}-x_{0},y_{i}-y_{0})\\Bigr\\},\n",
     "$$\n",
     "\n",
     "resulting in \n",
@@ -343,7 +343,7 @@
    "source": [
     "# YOUR CODE GOES HERE\n",
     "\n",
-    "# Estimate background as the mean of two outermost squares of pixels\n",
+    "# Estimate background as the mean of two outermost layers of pixels\n",
     "n = background = 0\n",
     "for (i, j) in np.ndindex(image.shape):\n",
     "    if i < 2 or j < 2 or i > xdim - 3 or j > ydim - 3:\n",
@@ -571,6 +571,7 @@
     "\n",
     "\n",
     "def get_lnL(image, muX, muY, sig, A, skyBg, sigPSF, Xpixels, Ypixels):\n",
+    "    # Poisson noise, so noise^2 = image\n",
     "    return -np.sum((image - gauss2D(muX, muY, sig, A, skyBg, sigPSF, Xpixels, Ypixels))**2 / image)\n",
     "\n",
     "\n",
@@ -584,6 +585,7 @@
     "    plt.close(fig)\n",
     "\n",
     "\n",
+    "# Get ln L and the parameters that maximize it\n",
     "def get_lnL_max(image, muX, muY, sig_grid, A_grid, skyBg, sigPSF, Xpixels, Ypixels):\n",
     "    lnL = np.array([[get_lnL(image, muX, muY, sig, A, skyBg, sigPSF, Xpixels, Ypixels) for sig in sig_grid] for A in A_grid])\n",
     "    max_ind = lnL.argmax()\n",
@@ -592,7 +594,7 @@
     "    \n",
     "    return lnL, sig_max, A_max\n",
     "\n",
-    "    \n",
+    "\n",
     "def plot_lnL_surface(lnL, sig_grid, A_grid):\n",
     "    sig_plot = np.array([sig_grid] * len(A_grid))\n",
     "    A_plot = np.array([A_grid] * len(sig_grid)).transpose()\n",
@@ -605,9 +607,12 @@
     "    plt.close(fig)\n",
     "\n",
     "\n",
+    "# Find parameters to maximize lnL\n",
     "lnL, sigma_max, C_max = get_lnL_max(image, muXtrue, muYtrue, sigma_grid, C_grid, skyBg, sigmaPSF, xpix[:, None], xpix)\n",
     "print(f'{sigma_max = }, {C_max = }')\n",
     "plot_lnL_surface(lnL, sigma_grid, C_grid)\n",
+    "\n",
+    "# Plot noiseless image, PSF, regular image, and image-PSF difference\n",
     "plot_images(nonoise, psf, image, diffimage)"
    ]
   },
@@ -857,7 +862,7 @@
     "Therefore\n",
     "\n",
     "$$\n",
-    "P(B\\mid D)=\\frac{\\int P(B\\mid p,D)\\,P(D\\mid p)\\,P(p)\\,dp}{\\int P(D\\mid p)\\,P(p)\\,dp}=\\frac{\\int_{0}^{1}p^{5}(1-p)^{6}\\,dp}{\\int_{0}^{1}p^{5}(1-p)^{3}\\,dp}=\\frac{\\beta(7,6)}{\\beta(4,6)}.\n",
+    "P(B\\mid D)=\\frac{\\int P(B\\mid p,D)\\,P(D\\mid p)\\,P(p)\\,dp}{\\int P(D\\mid p)\\,P(p)\\,dp}=\\frac{\\int_{0}^{1}p^{5}(1-p)^{6}\\,dp}{\\int_{0}^{1}p^{5}(1-p)^{3}\\,dp}=\\boxed{\\frac{\\beta(7,6)}{\\beta(4,6)}}\n",
     "$$\n",
     "\n",
     "</div>"
@@ -920,15 +925,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p_bob_mc = 0.0917\n",
-      "odds = 9.90\n"
+      "p_bob_mc = 0.0931\n",
+      "odds = 9.74\n"
      ]
     }
    ],
@@ -939,12 +944,15 @@
     "num_p_rolls = 100000\n",
     "p_rolls = rng.uniform(size=num_p_rolls)\n",
     "\n",
-    "rolls = rng.binomial(1, 1 - p_rolls[:, None], (num_p_rolls, 11))\n",
+    "rolls = rng.binomial(1, p_rolls[:, None], (num_p_rolls, 11))\n",
     "\n",
+    "# Assume 0 is a win for Bob, although either convention works\n",
     "cumulative_roll_wins_bob = np.cumsum(rolls == 0, axis=1)\n",
     "\n",
+    "# Score is 3 after 8th roll\n",
     "games_of_interest_inds = (cumulative_roll_wins_bob[:, 7] == 3)\n",
     "\n",
+    "# 6 points to win\n",
     "game_wins_bob = np.sum(cumulative_roll_wins_bob[games_of_interest_inds][:, -1] >= 6)\n",
     "\n",
     "p_bob_mc = game_wins_bob / games_of_interest_inds.sum()\n",
